# PicknPlace

./: README.md
docker/: Dockerfile  build_ros.sh  docker-run.sh  run_sim.sh
picknplace/: CMakeLists.txt  package.xml  setup.py
picknplace/launch/: warehouse.launch.py  warehouse_amr_only.launch.py
picknplace/maps/aws/: aws_map_large.yaml  aws_map_small.yaml
picknplace/rviz/: amr1_view.rviz  arm1_view.rviz
picknplace/scripts/: arm1_controller.py  basic_navigator.py  cube_controller.py
picknplace/urdf/conveyor_belt/: model copy.sdf  model.sdf  model2.sdf  model3.sdf
robot_interface/: CMakeLists.txt  package.xml
